# sys4c

./: .gitignore  .gitmodules  README.md  build-libsys4.sh  dune  dune-project  makefile  run.sh
extras/project-template/: build-unit.sh  makefile
extras/project-template/lib/: AliceLogo2.hll  Confirm2.hll  DrawGraph.hll  DrawPluginManager.hll  File.hll  InputString.hll  Math.hll  MsgLogManager.hll  MsgLogViewer.hll  MsgSkip.hll  MusicSystem.hll  OutputLog.hll  PlayMovie.hll  SACT2.hll  SystemService.hll
extras/project-template/src/: foo.jaf  main.jaf  object.jaf
libsys4/: ain.c  ain.ml  buffer.c  cBuffer.ml  dune  repack.c  system4_instructions.h
src/: ain.ml  ain.mli  bytecode.ml  cBuffer.ml  compileError.ml  compiler.ml  constEval.ml  dasm.ml  dasm.mli  declarations.ml  dune  error.ml  jaf.ml  lexer.mll  link.ml  parser.mly  sanityCheck.ml  sys4c.ml  typeAnalysis.ml  variableAlloc.ml
test/: break-destructor.jaf  break-nested.jaf  continue-destructor.jaf  continue-nested.jaf  dg-add.jaf  dg-clear.jaf  dg-erase.jaf  dg-exist.jaf  dg-minusa.jaf  dg-numof.jaf  dg-plusa.jaf  dg-set.jaf  goto-destructor.jaf  local-ref-int.jaf  local-ref-string.jaf  local-ref-struct.jaf  message-call.jaf  message.jaf  run-tests.sh  switch-default.jaf  switch.jaf  test-runner.sh  unicode.jaf
